--- a/port.html
+++ b/port.html
@@ -1,8 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
@@ -74,7 +72,7 @@
     <!-- Contact Section -->
     <section id="contact">
         <h2>Contact Me</h2>
-        <form action="error.html" method="post" id="contactForm">
+        <form action="https://murariguna.github.io./portfolio/error.html" method="post" id="contactForm">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
 
