--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <p>Cybersecurity Enthusiast | Python Programmer | Ethical Hacker</p><center>
 <h1>Welcome to My Portfolio</h1>
         <p style="margin: 40px;">
-            Hi, I'm Guna Satya Murari, a passionate cybersecurity student and a programming enthusiast dedicated to building secure digital solutions. My expertise spans across various domains, including Python programming, ethical hacking, steganography, and network security. I thrive on solving real-world challenges related to data protection and ensuring the integrity of digital systems. 
+            Hi, I'm Guna Satya Murari, a passionate cybersecurity student and a programming enthusiast dedicated to building secure digital solutions. 
         </p>
         <p style="margin: 40px;">
-            Through my journey, I have developed robust tools and techniques to identify vulnerabilities and protect sensitive data. My curiosity drives me to continuously explore innovative technologies and learn cutting-edge practices. Whether it's creating powerful penetration testing tools or enhancing existing security frameworks, I am committed to making the digital world a safer place.
+ My curiosity drives me to continuously explore innovative technologies and learn cutting-edge practices. Whether it's creating powerful penetration testing tools or enhancing existing security frameworks
         </p>
             <a href="about.html" class="button">Learn More About Me</a></center>
         </div>
